--- a/my-create-web3-dapp/frontend/components/instructionsComponent/instructionsComponent.module.css
+++ b/my-create-web3-dapp/frontend/components/instructionsComponent/instructionsComponent.module.css
@@ -7,7 +7,7 @@
   justify-content: space-between;
 
   /*  places background image in the main app */
-  background-image: url("./images/bg5.png");
+  background-image: url("./images/bg7.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
