--- a/my-create-web3-dapp/frontend/app/globals.css
+++ b/my-create-web3-dapp/frontend/app/globals.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,500;1,400&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Wavefont:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bowlby+One&family=Handjet:wght@300&family=Wavefont:wght@300&display=swap");
 
 html,
 body {
@@ -8,11 +9,30 @@ body {
   color: #20c20e;
 }
 h1 {
+  margin-top: 1rem;
   margin-bottom: 1rem;
+  font-family: "Bowlby One";
+  font-size: medium;
 }
+
 h2 {
-  margin-bottom: 0.5rem;
-  font-weight: normal;
+  margin-bottom: 1rem;
+  font-family: "Bowlby One";
+  font-size: xx-large;
+  font-style: italic;
+}
+
+h3 {
+  margin-bottom: 1rem;
+  font-family: "Bowlby One";
+  font-size: xx-large;
+  font-style: italic;
+}
+
+h4 {
+  font-family: "Rubik";
+  font-weight: bold;
+  color: black;
 }
 
 p {
@@ -40,5 +60,33 @@ a {
 
 @media (prefers-color-scheme: dark) {
   html {
+  }
+}
+
+/* ticker */
+.ticker-wrapper {
+  overflow: hidden;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+
+.ticker {
+  white-space: nowrap;
+  overflow: hidden;
+  animation: scrolling 10s linear infinite;
+}
+
+.ticker-item {
+  display: inline;
+  padding-right: 50px;
+}
+
+@keyframes scrolling {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(-100%);
   }
 }
