--- a/my-create-web3-dapp/frontend/components/instructionsComponent/navigation/footer/footer.module.css
+++ b/my-create-web3-dapp/frontend/components/instructionsComponent/navigation/footer/footer.module.css
@@ -1,12 +1,26 @@
-
-.footer{
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	gap:1rem;
+.footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
 }
-.icons_container{
-	display: flex;
-	gap: 2rem;
-	margin-bottom: .5rem;
+.icons_container {
+  display: flex;
+  gap: 2rem;
+  margin-bottom: 0.5rem;
+}
+
+.container2 {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 50px;
+  align-items: center;
+  justify-content: space-between;
+
+  /*  places background image in the main app */
+
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
