--- a/my-create-web3-dapp/frontend/components/instructionsComponent/instructionsComponent.module.css
+++ b/my-create-web3-dapp/frontend/components/instructionsComponent/instructionsComponent.module.css
@@ -42,6 +42,7 @@
 
 .get_started {
   font-size: 18px;
+  font-weight: bold;
 }
 
 .get_started span {
@@ -65,23 +66,27 @@
 }
 
 .button {
-  display: flex;
+  display: inline-flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
 
-  padding: 24px 32px;
-  gap: 12px;
+  padding: 12px 24px;
+  gap: 8px;
 
-  width: 392px;
-  height: 80px;
+  min-width: 200px;
+  height: 40px;
 
-  background: rgba(0, 0, 0, 0.9);
-  /* Grayscale/Metal */
-  box-shadow: 2px 2px 3px rgb(142, 142, 142);
-  border-radius: 12px;
+  background: rgba(0, 0, 0, 0.7);
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+  border-radius: 6px;
+
   cursor: pointer;
-  transition: all 0.5s;
+  transition: all 0.3s;
+
+  color: #fff;
+  font-family: "Rubik";
+  font-weight: bold;
 }
 
 .button:hover {
